--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,58 @@
-#votes {
+header {
+  height: auto;
+}
+
+.votes {
   display: none;
 }
 
-img {
+.heading {
+  padding: 5px;
+  text-align: center;
+  background-color: aqua;
+}
+
+.vote-msg {
+  text-align: center;
+}
+
+.photos_container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.photo_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 250px;
+  max-width: 200px;
+  margin: 5px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  border-top: none;
+}
+
+.selected_photo {
+  background-color: aquamarine;
+}
+
+.photo {
+  border-radius: 10px;
   height: 200px;
   width: 200px;
+}
+
+.photo_name {
+  margin: 0;
+  font-size: 10px;
+}
+
+.vote_btn_container {
+  margin: 5px;
+}
+
+.votes {
+  font-size: 12px;
 }
